NewArchive/5e19b51ada80fdffa864fbef6a2b4c9a-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:23:49: error: invalid use of incomplete type ‘struct optional_delete<TDx>’
 void optional_delete<TDx>::operator()( T* ptr ) const {
                                                 ^
main.cpp:5:8: error: declaration of ‘struct optional_delete<TDx>’
 struct optional_delete {
        ^
